peac_dev/force-app/main/default/objects/RateCard__c/RateCard__c.object-meta.xml
<CustomObject>
    <label>Rate Card</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>