peac_dev/force-app/main/default/objects/RateCard__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
  NOT(ISBLANK(Effective_Start_Date__c)),
  Effective_Start_Date__c &lt;= TODAY(),
  OR(
    ISBLANK(Effective_End_Date__c),
    Effective_End_Date__c &gt;= TODAY()
  )
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>