peac_dev/force-app/main/default/objects/RateCard__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <inlineHelpText>The starting rate that is added to the rate in the rate card to arrive at a total  defaulted rate.</inlineHelpText>
    <label>Base Rate</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>