peac_dev/force-app/main/default/objects/RateCard__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>