peac_dev/force-app/main/default/objects/RateCard__c/fields/Entry_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Entry_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The set of conditions used to determine if the rate card is applicable to a transaction for opportunities.</inlineHelpText>
    <label>Opportunity Entry Criteria</label>
    <referenceTo>TCRE__Rule_Config__c</referenceTo>
    <relationshipLabel>Rate Cards</relationshipLabel>
    <relationshipName>Rate_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>