peac_dev/force-app/main/default/objects/RateCard__c/fields/Quote_Entry_Config__c.field-meta.xml
<CustomField>
    <fullName>Quote_Entry_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The set of conditions used to determine if the rate card is applicable to a transaction for quotes.</inlineHelpText>
    <label>Quote Entry Config</label>
    <referenceTo>TCRE__Rule_Config__c</referenceTo>
    <relationshipLabel>Rate Cards (Quote Rule Config)</relationshipLabel>
    <relationshipName>Rate_Cards_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>