peac_dev/force-app/main/default/objects/RateCard__c/fields/Rate_Card_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Ext_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Rate Card Ext ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>