peac_dev/force-app/main/default/objects/RateCard__c/fields/Rate_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Type__c</fullName>
    <label>Rate Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest Rate</fullName>
            </value>
            <value>
                <fullName>Rate Factor</fullName>
            </value>
            <value>
                <fullName>Residual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>