peac_dev/force-app/main/default/objects/RateCard__c/validationRules/Effective_End_Not_Before_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_End_Not_Before_Start</fullName>
    <active>true</active>
    <description>Effective End Date must be on or after Effective Start Date.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Effective_Start_Date__c)),
  NOT(ISBLANK(Effective_End_Date__c)),
  Effective_End_Date__c &lt; Effective_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Effective_End_Date__c</errorDisplayField>
    <errorMessage>Effective End Date must be on or after Effective Start Date.</errorMessage>
</ValidationRule>