peac_dev/force-app/main/default/objects/RateCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Entry_Criteria__c</columns>
    <columns>Quote_Entry_Config__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>