peac_dev/force-app/main/default/objects/RateCard__c/listViews/Imported_By_Jm.listView-meta.xml
<ListView>
    <fullName>Imported_By_Jm</fullName>
    <columns>NAME</columns>
    <columns>Entry_Criteria__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Imported By Jm</label>
</ListView>